--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    height: 100%;
+    background-color: aquamarine;
+    position: relative;
+    padding-bottom: 50px;
+}
