--- a/src/app/pages/characteres/characteres.component.html
+++ b/src/app/pages/characteres/characteres.component.html
@@ -10,7 +10,7 @@
 
           {{ character.status }}
       </p>
-      <a class="btn btn-danger" (click)="addFavorite(character)">
+      <a class="btn btn-primary" (click)="addFavorite(character)">
         <!-- <i class="fa-solid fa-add"></i> -->
         <i class="fa-solid fa-address-book"></i>
       </a>
