--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -53,4 +53,9 @@
        Ingresa desde aqui
     </a>
   </div>
+  <div class="mensaje-erroneo" *ngIf="messages.length>0">
+    <p *ngFor="let mssg of messages" class="margin-mesaje-parrafo">
+      {{mssg}}
+    </p>
+  </div>
 </div>
